<resources>
    <string name="app_name">Android_ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="how_to">How to Play</string>
    <string name="how_to_info">Click on the buttons or text boxes</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_blue">Blue</string>
</resources>